Assignment/Assessment.css
header {
    background-color: lightblue;
    color: black;
    display: block;
    font-size: 3em;
    text-align: center;
}

body{
background-color: lightblue;
display: grid;
grid-template-columns: 100%;
grid-template-rows: 10% 0% 12% 10%;
grid-template-areas: 
"header" 
"nav"
"main"
"footer";


}

nav {
float: left;
background-color:lightgreen;
color: white;
height: 3em;

}

nav ul {
margin: 0;
padding: 0;
list-style: none;
}

nav li {
    display: inline-block;
    margin-right: 5.8em;
    margin-left: 5.8em;
    padding-top: 1.1em;
    padding-bottom: 1.1em;
    position: relative;
}

nav a {
    color: black;
    text-decoration: none;
    text-transform: uppercase;

}

nav a:hover {
    color:red;

}

nav a::before {
content:"";
display:block;
height: 0.2em;
width: 100%;
background-color:red;
position: absolute;
top: 0;
width: 0%;
transition: all ease-in-out 250ms;
}

nav a:hover::before {
    width: 100%;
}

main {  
    margin-left:6em ;
    margin-right:6em ;
}

.imagehomepage {
    display: block;
    margin-left: auto;
    margin-right: auto }


.column {
    float: left;
    width: 48%;
    padding: 10px;
}

.row:after {
    content: "";
    display: table;
    clear: both;
}

.imageportfolio {
    margin-top:2em ;
    margin-left:5em ;
    margin-right:10em ;
}

form {
    display:grid;
    width: 25em;
    grid-template-columns: 50% 50%;
    align-items: center;
    grid-gap: 0.5em;
    margin: auto;
    

}

.submit{
    grid-column: 2;
}

